fixed error of matching services